fixed scrollbar issue

--- a/recipes-client/css/index.css
+++ b/recipes-client/css/index.css
@@ -46,6 +46,7 @@ body, html {
 }
 
 .daily-recipes {
+  overflow: hidden;
   margin-left: auto;
   margin-right: auto;
   height: 12%;
@@ -55,7 +56,6 @@ body, html {
   border-color: green;
   border-style: solid; 
   padding-left: 5px;
-  overflow: auto;
 }
 
 .daily-recipes > i {
